Move plan-type member to a more appropriate class.

20160508T1517Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor for clarity.

20160508T1530Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor for efficiency (VZ).

20160508T2139Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor for concision.

20160508T2207Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor.

20160509T1708Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Show elected riders.

20160509T1844Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Improve consistency testing for an odd legacy product.

20160510T0041Z <gchicares@sbcglobal.net> [451]

  ledger_invariant.cpp
  ledger_invariant.hpp
  product_data.cpp
  product_data.hpp
Expunge a disused product parameter.

20160510T2309Z <gchicares@sbcglobal.net> [451]

  ledger_xml_io.cpp
Provide a ledger format for 'GroupIndivSelection'.

20160510T2310Z <gchicares@sbcglobal.net> [451]

  illustrator.cpp
Exempt some riders from group-quote consistency test.

20160511T1648Z <gchicares@sbcglobal.net> [451]

  wx_test_validate_output.cpp
Fix a typographical error in a comment.

20160511T1650Z <gchicares@sbcglobal.net> [451]

  path_utility.hpp
Define operator<<() for fs::path in the right namespace (VZ).

20160511T1700Z <gchicares@sbcglobal.net> [451]

  interest_rates.cpp
Initialize variables explicitly to avoid warnings (VZ).

20160511T1713Z <gchicares@sbcglobal.net> [451]

  ihs_crc_comp.cpp
Restore std::cout precision after changing it (VZ).

20160511T2002Z <gchicares@sbcglobal.net> [451]

  wx_test_validate_output.cpp
Fix defect introduced 20160511T1648Z: extra space (reported by VZ).

20160511T2003Z <gchicares@sbcglobal.net> [451]

  icon_monger.cpp
Avoid spurious warnings when loading standard wx icons (VZ).

20160511T2238Z <gchicares@sbcglobal.net> [451]

  skeleton.cpp
Restrict multiline text-paste handler to input seq entries (VZ).
